--- a/src/themes/default/style.css
+++ b/src/themes/default/style.css
@@ -9,13 +9,13 @@ body{
     margin-left: -250px;
     width: 500px;
     height: 50px;
-    background: #FF8003;
+    background: #3c8dbc;
     /*box-shadow: 2px 2px #f9f2f4;*/
     color: #ffffff;
     text-align: center;
     line-height: 50px;
     border-radius: 4px;
-    border: 1px solid pink;
+    border: 1px solid #dddddd;
     z-index: 1992;
 }
 .jakes-mask{
@@ -37,7 +37,7 @@ body{
     display: none;
     background: #fff;
     height: 150px;
-    border: 2px solid #FF8003;
+    border: 2px solid #3c8dbc;
     border-radius: 2px;
     position: fixed;
     top: 20px;
@@ -63,7 +63,7 @@ body{
     right: 5px;
 }
 .jakes-confirm .jakes-confirm-buttons button{
-    background: #FF8003;
+    background: #3c8dbc;
     margin: 0 5px;
     border: none;
     color: #fff;
@@ -77,7 +77,7 @@ body{
     width: 500px;
     height: 150px;
     background: #fff;
-    border: 2px solid #FF8003;
+    border: 4px solid #3c8dbc;
     border-radius: 2px;
     position: fixed;
     top: 20px;
@@ -85,6 +85,15 @@ body{
     left: 50%;
     margin-left: -250px;
     z-index: 1992;
+}
+
+@media (max-width: 1000px) {
+    .jakes-alert{
+        width: 80%;
+        margin: 0 auto;
+        position: fixed;
+        left: 50%;
+    }
 }
 .jakes-alert .jakes-alert-header{
     height: 35px;
@@ -104,7 +113,7 @@ body{
     left: 50%;
 }
 .jakes-alert .jakes-alert-button button{
-    background: #FF8003;
+    background: #3c8dbc;
     margin: 0 5px;
     border: none;
     color: #fff;
