--- a/src/themes/default/style.css
+++ b/src/themes/default/style.css
@@ -95,7 +95,7 @@ body{
         left: 50%;
     }
 }
-.jakes-alert .jakes-alert-header{
+.jakes-alert .jakes-alert-header, .jakes-html-header{
     height: 35px;
     line-height: 35px;
     padding-left: 5px;
@@ -121,6 +121,22 @@ body{
     border-radius: 2px;
     outline: none;
     cursor: pointer;
+}
+
+.jakes-html {
+    min-width: 500px;
+    max-width: 80%;
+    border: 2px solid #3c8dbc;
+    background: #fff;
+    border-radius: 2px;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    margin-left: -250px;
+    z-index: 1992;
+}
+.jakes-html .jakes-html-content {
+    padding: 10px;
 }
 
 .jakes-close-icon{
