--- a/edsUI.css
+++ b/edsUI.css
@@ -28,7 +28,6 @@ body{
     opacity: 0.5;
     filter:alpha(opacity=50);
     -moz-opacity:0.5;
-    -khtml-opacity: 0.5;
     z-index: 1991;
 }
 
@@ -147,7 +146,7 @@ body{
     right: 5px;
     top: 8px;
     cursor: pointer;
-    background: url("img/edsUI-close.png");
+    background: url("images/edsUI-close.png");
     background-size: 100%;
 
     transition:All 0.4s ease-in-out;
